profilelist1exp/unpackaged/objects/Octane_Config_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>All Octane Configuration Settings
Enable/Disable User Access
Maximum No of Recommendations
Enviroment
Enpoint
User Name
Password</description>
    <fields>
        <fullName>Enable_Disable_Group_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable/Disable Group Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hour_Limit_for_Sending_Email__c</fullName>
        <label>Hour Limit for Sending Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Recommendations_Limit__c</fullName>
        <label>Recommendations Count Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Octane Config Settings</label>
</CustomObject>